# AutoPingCode

./: .gitignore  app.py  bug_info.json  docker-compose.yaml  dockerfile  get_pc_bug_json.py  localrun.py  main.py  ping_code_to_feishu.py  pingcode迁移云效脚本.py  pyproject.toml  requirements.txt  update_yunxiao_module.py
flask_app/: sync_bugs_app.py
flask_app/static/: index.html  smart_report.html
utils/: __init__.py  feishu_project_api_utils.py  feishu_project_utils.py  get_smart_system_disk.sh  log_utils.py  nas_utils.py  ping_code_utils.py  request_utils.py  thread_utils.py  utils.py  yunxiao_utils.py
